--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
     border-radius: 5px;
     border: 0.5px solid gray;
     margin-bottom: 5%;
+    outline: none;
 }
 
 .stay form button {
@@ -76,6 +77,12 @@ body {
     border-radius: 5px;
     border: none;
     background-color: #212542;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.stay form button:hover {
+    background-color: color-mix(in srgb, #FF5475 40%, #FF6742);
 }
 
 .stay form button a {
@@ -94,4 +101,60 @@ body {
 
 .icon img {
     width: 260px;
+}
+
+
+/* SUCCESS MESSAGE */
+
+.message {
+    max-width: 330px;
+    margin: 100px auto;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 20px;
+}
+
+.message img {
+    width: 40px;
+    margin-bottom: 8%;
+}
+
+.message h3 {
+    font-size: 39px;
+    color: #212542;
+    line-height: 1;
+    margin-bottom: 8%;
+}
+
+.message p {
+    font-size: 11px;
+    color: #212542;
+    margin-bottom: 8%;
+    font-weight: 500;
+}
+
+.message span {
+    font-weight: 600;
+}
+
+.message button {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #212542;
+    transition: .3s;
+    cursor: pointer;
+    margin-bottom: 5%;
+}
+
+.message button:hover {
+    background-color: color-mix(in srgb, #FF5475 40%, #FF6742);
+}
+
+.message button a {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 12px;
+    color: #fff;
 }
